# wasm-playground

./: .gitignore  README.md  build.gradle  settings.gradle  wasmtime-config.toml
extism/simple-go/: README.md  go.mod  main.go  plugin.wasm
extism/simple-js/: README.md  plugin.d.ts  plugin.js  plugin.wasm
extism/simple-rust/: Cargo.toml  README.md  plugin.wasm
extism/simple-rust/src/: lib.rs
k6/: README.md  extism-http-post.js  extism-kv-store.js
src/main/java/io/viax/wasmplayground/: WasmPlaygroundApplication.java
src/main/java/io/viax/wasmplayground/configuration/: ExtismConfiguration.java  ExtismPluginProperties.java  ExtismProperties.java  KeyValueStoreConfiguration.java  SimpleConfiguration.java
src/main/java/io/viax/wasmplayground/controller/: ExtismController.java  SimpleController.java
src/main/java/io/viax/wasmplayground/model/: SimpleModel.java
src/main/java/io/viax/wasmplayground/service/: ConcurrentExtismPluginService.java  DefaultExtismPluginService.java  ExtismPluginService.java  FixedExtismPluginService.java
src/main/resources/: application.yml  logback.xml
src/test/java/io/viax/wasmplayground/: WasmPlaygroundApplicationTests.java
