[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.1.0"
serde = "1.0.197"
serde_json = "1.0.115"

[lib]
crate_type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
